build_files/test/lib/error/includes/sub_include/error_typedef.h
/*
** EPITECH PROJECT, 2025
** sub_includes - error_typedef.h
** File description:
** <description>
*/

// Typedef //
#ifndef ERROR_T
    #define ERROR_T

    #include "error_include.h"

#ifndef ERROR_T_TYPE
        #define ERROR_T_TYPE

// add type typedefs here //

    #endif

    #ifndef ERROR_T_STRUCT
        #define ERROR_T_STRUCT

typedef struct {
} error_list_t;

// add struct typedefs here //

    #endif

#endif
